tests/baselines/reference/propertyAccess4.errors.txt
tests/cases/compiler/propertyAccess4.ts(1,1): error TS18049: The value 'null' cannot be used here.


==== tests/cases/compiler/propertyAccess4.ts (1 errors) ====
    null.toBAZ();
    ~~~~
!!! error TS18049: The value 'null' cannot be used here.